Implement dashboard page, add Firebase configuration, and set up Mantine theme

--- a/package.json
+++ b/package.json
@@ -9,18 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^17.0.0",
+    "@mantine/carousel": "^7.14.3",
+    "@mantine/charts": "^7.14.3",
+    "@mantine/core": "^7.14.3",
+    "@mantine/dates": "^7.14.3",
+    "@mantine/dropzone": "^7.14.3",
+    "@mantine/form": "^7.14.3",
+    "@mantine/hooks": "^7.14.3",
+    "@mantine/modals": "^7.14.3",
+    "@mantine/notifications": "^7.14.3",
+    "@mantine/spotlight": "^7.14.3",
+    "@sendgrid/mail": "^8.1.4",
+    "@tabler/icons-react": "^3.24.0",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
+    "cookies-next": "^5.0.2",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
+    "firebase-functions": "^6.1.1",
+    "html-to-react": "^1.7.0",
+    "lodash": "^4.17.21",
+    "next": "15.0.4",
+    "nodemailer": "^6.9.16",
+    "raw-body": "^3.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "react-confetti": "^6.1.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^8",
+    "eslint-config-mantine": "^4.0.3",
+    "eslint-config-next": "15.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "github-slugger": "^2.0.0",
+    "lint-staged": "^15.2.10",
+    "npm-check-updates": "^17.1.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.4"
+    "typescript": "5.6.2"
   }
 }
